force-app/main/default/objects/HP_Token_Parameter__mdt/HP_Token_Parameter__mdt.object-meta.xml
<CustomObject>
    <label>HP Token Parameter</label>
    <pluralLabel>HP Token Parameters</pluralLabel>
</CustomObject>