force-app/main/default/objects/HP_Token_Parameter__mdt/fields/Cache_Id__c.field-meta.xml
<CustomField>
    <fullName>Cache_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Cache Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>