force-app/main/default/objects/HP_Token_Parameter__mdt/fields/Gaia__c.field-meta.xml
<CustomField>
    <fullName>Gaia__c</fullName>
    <label>Gaia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>