force-app/main/default/objects/HP_Token_Parameter__mdt/fields/Header_key__c.field-meta.xml
<CustomField>
    <fullName>Header_key__c</fullName>
    <label>Header key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>