force-app/main/default/objects/HP_Token_Parameter__mdt/fields/Mdp__c.field-meta.xml
<CustomField>
    <fullName>Mdp__c</fullName>
    <label>Mdp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>