force-app/main/default/objects/HP_Token_Parameter__mdt/fields/Token_Needed__c.field-meta.xml
<CustomField>
    <fullName>Token_Needed__c</fullName>
    <label>Token Needed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>